# data_pipeline_agent

./: .env  .env.example  .gitignore  README.md  README_CN.md  SECURITY.md  pyproject.toml
logs/: log4j-active.txt  stderr--2025-11-26--07-00.txt  stderr--2025-11-26--08-00.txt  stderr.txt  stdout--2025-11-26--07-00.txt  stdout--2025-11-26--08-00.txt  stdout.txt
src/data_pipeline_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/ingestion_agent/: __init__.py  main.py
src/ingestion_agent/agent/: __init__.py  maf_adapter.py  service.py
src/ingestion_agent/core/: __init__.py  config_models.py  databricks_client.py  llm_client.py  nlu_parser.py  settings.py  template_renderer.py
src/ingestion_agent/examples/: orders.yaml  postgres_orders.yaml  sqlserver_sales.yaml
src/ingestion_agent/templates/: batch_ingest.py.j2
src/ingestion_agent/ui/: __init__.py  streamlit_app.py
